working on api calls with fetch

--- a/index.html
+++ b/index.html
@@ -1,23 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trivia Questions</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Trivia Questions</h1>
-    </header>
-    <section class="centered">
-      <form>
-        <button type="submit">Get New Questions</button>
-      </form>
-    </section>
-    <main class="centered">
-      <!-- Your `.card` elements should show up here. -->
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Trivia Questions</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <h1>Trivia Questions</h1>
+  </header>
+  <section class="centered">
+    <form>
+      <button id="btnQuestions" type="button">Get New Questions</button>
+    </form>
+  </section>
+  <main id="main-container" class="centered">
+    <!-- Your `.card` elements should show up here. -->
+  </main>
+ 
+ <script lang="javascript">
+    var btnQuestions = document.getElementById('btnQuestions');
+    btnQuestions.addEventListener("click", submitClick);
+
+    async function submitClick() {
+      const response = await fetch('https://opentdb.com/api.php?amount=10&difficulty=medium&type=multiple');
+      const questions = await response.json();
+
+      console.log(questions);
+
+      const questionsHTML = questions.results.reduce((accumulator, item) => {
+        const { category, question, correct_answer } = item;
+        return accumulator += `<article class="card">
+  <h2>${category}</h2>
+  <p>${question}</p>
+  <button name="show-answer">Show Answer</button>
+  <p class="hidden">${correct_answer}</p>
+</article>`;
+      }, '');
+
+      const centeredEle = document.getElementById('main-container');
+      centeredEle.innerHTML = questionsHTML;
+
+      var showAnswers = document.getElementsByName('show-answer');
+      for (let i = 0; i < showAnswers.length; i++) {
+        showAnswers[i].addEventListener('click', showAnswer);
+      }
+      function showAnswer(event) {
+        const clickTarget = event.target;
+        const hiddenAnswer = clickTarget.nextElementSibling;
+        hiddenAnswer.classList.remove('hidden');
+      }
+    }
+
+  </script>
+</body>
+
 </html>
